# nordic_air_quality

./: .gitignore  README.md
crates/naq_cli/: Cargo.toml  README.md
crates/naq_cli/src/: main.rs
crates/naq_device_connector/: Cargo.toml  Cross.toml  README.md
crates/naq_device_connector/src/: lib.rs
crates/naq_domain/: Cargo.toml  README.md
crates/naq_domain/src/: lib.rs
crates/naq_tui/: Cargo.toml
