[package]
name = "naq_device_connector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.8.1"
rand = "0.8.4"
tokio = { version = "1.11.0", features = ["full"] }
uuid = "0.8.2"
macaddr = "1.0.1"
lazy_static = "1.4.0"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
naq_domain = { path = "../naq_domain"}